Fix menu spacing

--- a/assets/base.css
+++ b/assets/base.css
@@ -2799,7 +2799,7 @@ details[open]>.header__submenu {
 .header__menu-item {
   font-size: 16px;
   padding: 1.2rem;
-  padding-right: 6rem;
+  padding-right: 5rem;
   text-decoration: none;
   color: rgba(var(--color-foreground), 0.75);
 }
